; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_antic.c_update_scanline_invert.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_antic.c_update_scanline_invert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ANTIC_cpu2antic_ptr = common dso_local global i32* null, align 8
@ANTIC_xpos = common dso_local global i64 0, align 8
@IR = common dso_local global i32 0, align 4
@ANTIC_HSCROL = common dso_local global i32 0, align 4
@ANTIC_cur_screen_pos = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_scanline_invert() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load i32*, i32** @ANTIC_cpu2antic_ptr, align 8
  %6 = load i64, i64* @ANTIC_xpos, align 8
  %7 = getelementptr inbounds i32, i32* %5, i64 %6
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* @IR, align 4
  %10 = and i32 %9, 16
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %0
  %13 = load i32, i32* @ANTIC_HSCROL, align 4
  br label %15

14:                                               ; preds = %0
  br label %15

15:                                               ; preds = %14, %12
  %16 = phi i32 [ %13, %12 ], [ 0, %14 ]
  store i32 %16, i32* %2, align 4
  %17 = load i32, i32* %2, align 4
  %18 = and i32 %17, 1
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %1, align 4
  %20 = mul nsw i32 %19, 2
  %21 = sub nsw i32 %20, 37
  %22 = load i32, i32* %3, align 4
  %23 = add nsw i32 %21, %22
  %24 = add nsw i32 %23, 4
  store i32 %24, i32* %4, align 4
  %25 = load i32, i32* @ANTIC_cur_screen_pos, align 4
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @draw_partial_scanline(i32 %25, i32 %26)
  %28 = load i32, i32* %4, align 4
  store i32 %28, i32* @ANTIC_cur_screen_pos, align 4
  ret void
}

declare dso_local i32 @draw_partial_scanline(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
